--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -21,24 +21,8 @@
 </head>
 
 <body>
-	
-<div>
-	<!-- <nav>
-			<div class="nav-wrapper #283593 indigo darken-3">
 
-				<ul id="nav-mobile" class="right hide-on-med-and-down">
-
-					<li><a href="Home.html">Home</a></li>
-					<li><a href="Aboutus.html">Who we are</a></li>
-					<li><a href="faqs.html">FAQs</a></li>
-					<li><a href="Account.html">Account</a></li>
-
-				</ul>
-
-			</div>
-	</nav> -->
-
-
+	<div>
 		<header class="row #283593 indigo darken-3">
 			<div class="container">
 				<div class="row">
@@ -47,33 +31,13 @@
 			</div>
 		</header>
 
-</div>
+	</div>
 
-<div class = "divider"></div>
+<main>
+	{{{body}}}
 
-<main >
 
-	<div class = "row navbuttons container">       
-		<ul class="nav">   
-			<div class="row">
-				<div class="col s6 l4 offset-l2">
-		   			<a class="button btn-floating btn-large waves-effect waves-light red z-depth-5"><i class="material-icons">touch_app</i></a>
-
-		   			<h3 class="fonto">Register</h3>
-		   		</div>	
-
-				<div class="col s6 l4 offset-l2">   		
-		   			<a class="button btn-floating btn-large waves-effect waves-light red z-depth-5"><i class="material-icons">touch_app</i></a>
-
-		   			<h3 class="fonto">Login</h3>
-		   		</div>
-		   	</div>	
-		</ul> 
-    </div>
-
-		
-
-	<footer class="page-footer footer-copyright #283593 indigo darken-3">
+		<footer class="page-footer footer-copyright #283593 indigo darken-3">
 		<div class="container">
 			<h5 class="center-align"><strong>Copyright &copy; The NonToxx</strong></h5>
 		</div>
@@ -90,4 +54,5 @@
  	});
 </script>
 </body>
+
 </html>
